# MTGDB

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  schema.sql  vcpkg.json
mtgdb/: CMakeLists.txt  mtgdb.cpp  mtgdb.h
mtgdb/include/: db_interface.h  mtgdb.h  scryfall_api.h
mtgdb/lib/: api_result.cpp  db_interface.cpp  scryfall_api.cpp
mtgdb/src/: mtgdb.cpp
